RESOLVED FIXED83264
[EFL][DRT] @font-face support fails on EFL
https://bugs.webkit.org/show_bug.cgi?id=83264
Summary [EFL][DRT] @font-face support fails on EFL
Dominik Röttsches (drott)
Reported 2012-04-05 04:16:26 PDT
Several LayoutTests require @font-face to be working. This seems to fail, e.g. at least in the new tests from bug 34147: /fast/css/font-face-synthetic-bold-italic.html /fast/css/font-face-weight-matching.html
Attachments
Inverting switch logic for storing custom font data (1.43 KB, patch)
2012-04-18 04:14 PDT, Dominik Röttsches (drott)
no flags
Inverting switch logic for storing custom font data (1.34 KB, patch)
2012-04-18 08:59 PDT, Dominik Röttsches (drott)
no flags
Dominik Röttsches (drott)
Comment 1 2012-04-18 04:14:11 PDT
Created attachment 137667 [details] Inverting switch logic for storing custom font data Feedback from Chromium people is appreciated.
Dimitri Glazkov (Google)
Comment 2 2012-04-18 07:56:15 PDT
Comment on attachment 137667 [details] Inverting switch logic for storing custom font data View in context: https://bugs.webkit.org/attachment.cgi?id=137667&action=review > Source/WebCore/loader/cache/CachedFont.cpp:30 > +#if !(PLATFORM(CHROMIUM) && OS(DARWIN) && USE(CG)) && !PLATFORM(WIN_CAIRO) && !PLATFORM(WX) Since we no longer use CG in Chromium, I don't think that condition is even needed here. Elliot?
epoger
Comment 3 2012-04-18 08:46:26 PDT
(In reply to comment #2) > (From update of attachment 137667 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=137667&action=review > > > Source/WebCore/loader/cache/CachedFont.cpp:30 > > +#if !(PLATFORM(CHROMIUM) && OS(DARWIN) && USE(CG)) && !PLATFORM(WIN_CAIRO) && !PLATFORM(WX) > > Since we no longer use CG in Chromium, I don't think that condition is even needed here. Elliot? Well, (PLATFORM(CHROMIUM) && OS(DARWIN) && USE(CG)) should always evaluate to FALSE, because as of http://trac.webkit.org/changeset/110056 , the Chromium gyp files within WebKit won't use CG. There is still cleanup that needs to be done to get rid of all the lingering Chromium+CG code... tracked in http://crbug.com/110881 ('cleanup: remove use_skia=0 build option')
Dominik Röttsches (drott)
Comment 4 2012-04-18 08:51:56 PDT
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 137667 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=137667&action=review > > > > > Source/WebCore/loader/cache/CachedFont.cpp:30 > > > +#if !(PLATFORM(CHROMIUM) && OS(DARWIN) && USE(CG)) && !PLATFORM(WIN_CAIRO) && !PLATFORM(WX) > > > > Since we no longer use CG in Chromium, I don't think that condition is even needed here. Elliot? > > Well, (PLATFORM(CHROMIUM) && OS(DARWIN) && USE(CG)) should always evaluate to FALSE, because as of http://trac.webkit.org/changeset/110056 , the Chromium gyp files within WebKit won't use CG. > > There is still cleanup that needs to be done to get rid of all the lingering Chromium+CG code... tracked in http://crbug.com/110881 ('cleanup: remove use_skia=0 build option') So, can I conclude that #if !PLATFORM(WIN_CAIRO) && !PLATFORM(WX) would be enough?
epoger
Comment 5 2012-04-18 08:58:39 PDT
(In reply to comment #4) > So, can I conclude that > #if !PLATFORM(WIN_CAIRO) && !PLATFORM(WX) > would be enough? As far as I know, yes.
Dominik Röttsches (drott)
Comment 6 2012-04-18 08:59:23 PDT
Created attachment 137704 [details] Inverting switch logic for storing custom font data Chromium case removed after feedback from Chromium people.
WebKit Review Bot
Comment 7 2012-04-18 10:17:13 PDT
Comment on attachment 137704 [details] Inverting switch logic for storing custom font data Clearing flags on attachment: 137704 Committed r114523: <http://trac.webkit.org/changeset/114523>
WebKit Review Bot
Comment 8 2012-04-18 10:17:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.