[EFL][DRT] @font-face support fails on EFL https://bugs.webkit.org/show_bug.cgi?id=83264

Patch by Dominik Röttsches <dominik.rottsches@linux.intel.com> on 2012-04-18
Reviewed by Dimitri Glazkov.

STORE_FONT_CUSTOM_PLATFORM_DATA was not defined for EFL.
Fixing that by removing a long standing FIXME with the intention
to turn the whitelist for this switch into a blacklist.

* loader/cache/CachedFont.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@114523 bbb929c8-8fbe-4397-9dbb-9b2b20218538