third_party/WebKit/Source/WebCore/loader/cache/CachedFont.cpp
@@ -28,8 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "CachedFont.h"
 
-// FIXME: This should really be a blacklist instead of a whitelist
-#if USE(CG) || PLATFORM(QT) || PLATFORM(GTK) || (PLATFORM(CHROMIUM) && (!OS(DARWIN) || USE(SKIA_ON_MAC_CHROMIUM))) || OS(WINCE) || PLATFORM(BLACKBERRY)
+#if !PLATFORM(WIN_CAIRO) && !PLATFORM(WX)
 #define STORE_FONT_CUSTOM_PLATFORM_DATA
 #endif
 
